policies/governance/bundles/policy-essentials-v2022/pods-require-security-context.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodsRequireSecurityContext
metadata:
  name: policy-essentials-v2022-pods-require-security-context
  labels:
    policycontroller.gke.io/bundleName: policy-essentials-v2022
  annotations:
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'policy-essentials-v2022',
        bundleDisplayName: 'Policy Essentials v2022',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/bundles/policy-essentials-v2022',
        bundleVersion: '202307.1',
        bundleDescription: 'Use the Policy Essentials v2022 policy bundle with Anthos Policy Controller to apply Google recommended best practices to your cluster resources.',
        controlNumbers: '[]',
        severity: 'UNASSIGNED',
        description: 'Requires that Pods define `securityContext`.',
        remediation: 'Containers cannot run without a `securityContext` defined. Set your containers `securityContext: `. See "Set the security context for a Pod" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod',
        minimumTemplateLibraryVersion: '1.14.3'
      }"
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - kube-system
      - config-management-system
      - asm-system
      - ai-ml-nvidia
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
  parameters:
    exemptImages:
      - gcr.io/anthos-baremetal-release/*
